# tfstated

./: .gitignore  LICENSE  Makefile  README.md  config.ini.example  pyproject.toml  test_stateview.py  tfstated.py
