[project]
name = "tfstated"
dynamic = ["version"]
description = "terraform http backend"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["terraform", "tfstate"]
authors = [
    {name = "Anbarasan G", email = "nasarabna@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "Flask",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
]

test = [ "tox" ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tfstated"]

[tool.setuptools.dynamic]
version = {attr = "tfstated.__version__"}

[tool.pylint.messages_control]
max-line-length = 80

[tool.black]
line-length = 80

[tool.tox]
isolated_build = true
env_list = ["py39", "py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
deps = ["coverage"]
description = "Run test under {base_python}"
commands = [
    ["coverage", "run", "-m", "unittest"],
    ["coverage", "report", "--omit", "test_*"]
]
